--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@types/jquery": "^3.5.16",
 		"@types/mithril": "^2.0.12",
+		"@types/node": "^18.11.18",
 		"autoprefixer": "^10.4.13",
 		"eslint": "^8.32.0",
 		"eslint-plugin-mithril": "^0.2.0",
@@ -22,6 +23,8 @@
 		"postcss-plugin": "1.0.0",
 		"prettier": "^2.8.3",
 		"tailwindcss": "^3.2.4",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.9.4",
 		"vite": "^4.0.4"
 	}
 }
